--- a/hello.html
+++ b/hello.html
@@ -16,10 +16,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<!-- description -->
 		<div>
+		    <h1> Ma description </h1>
 		    <p>Je m'appelle Sada et c'est ma première formation Git<p>
 		</div>
-		
+		<!-- recompense -->
+		<div>
+		    <h1> Mes récompenses </h1>
+		    <p> En construction <p>
+		</div>		
 	
 </body></html>
