--- a/hello.html
+++ b/hello.html
@@ -25,6 +25,11 @@
 		<div>
 		    <h1> Mes récompenses </h1>
 		    <p> <img src="images\medal_bronze.png"> <img src="images\medal_silver.png"><p>
-		</div>		
+		</div>	
+		<!-- Commandes git -->
+		<div>
+		    <h1> Mes commandes git </h1>
+		    <p> git pul <p>
+		</div>				
 	
 </body></html>
