--- a/hello.html
+++ b/hello.html
@@ -30,7 +30,8 @@
 		<div>
 		    <h1> Mes commandes git </h1>
 		    <p> git pul <p>
-		    <p> git push <p>			
+		    <p> git push <p>	
+		    <p> git log <p>			
 		</div>				
 	
 </body></html>
